# starting-ragchatbot-codebase

./: .gitignore  CLAUDE.md  Makefile  TEST_RESULTS.md  frontend-changes.md  pyproject.toml  query-flow-diagram.md  test_ui_integration.sh
backend/: .flake8  ai_generator.py  app.py  config.py  rag_system.py  search_tools.py  session_manager.py
backend/tests/: conftest.py  test_ai_generator.py  test_ai_generator_sequential.py  test_api_endpoints.py  test_rag_system.py  test_search_tools.py  test_sequential_integration.py  test_vector_store.py
frontend/: index.html  script.js  style.css
tests/: chat_interface.test.js  package.json  playwright.config.js
